<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_analytics"
            android:title="@string/nav_statistic" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_appetite_control"
            android:icon="@drawable/ic_dining"
            android:title="@string/nav_appetite_control" />
        <item
            android:id="@+id/nav_pdf"
            android:icon="@drawable/ic_pdf"
            android:title="@string/nav_pdf" />
    </group>
</menu>