<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bizubizu.foodjournal.ui.home.HomeFragmentFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_about"
            app:destination="@id/nav_about" />
        <action
            android:id="@+id/action_nav_home_to_nav_statistic"
            app:destination="@id/nav_statistic" />
        <action
            android:id="@+id/action_nav_home_to_nav_newNote"
            app:destination="@id/nav_newNote" />
        <action
            android:id="@+id/action_nav_home_to_nav_profile"
            app:destination="@id/nav_profile" />
        <action
            android:id="@+id/action_nav_home_to_nav_appetite_control"
            app:destination="@id/nav_appetite_control" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.bizubizu.foodjournal.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.bizubizu.foodjournal.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.bizubizu.foodjournal.ui.about.AboutFragment"
        android:label="fragment_about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_nav_about_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_appetite_control"
        android:name="com.bizubizu.foodjournal.ui.appetiteControl.AppetiteControlFragment"
        android:label="AppetiteControl"
        tools:layout="@layout/fragment_appetite_control" >
        <action
            android:id="@+id/action_nav_appetite_control_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_appetite_control_to_nav_home2"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_pdf"
        android:name="com.bizubizu.foodjournal.ui.pdf.PdfFragment"
        android:label="fragment_pdf"
        tools:layout="@layout/fragment_pdf" >
        <action
            android:id="@+id/action_nav_pdf_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

   <fragment
        android:id="@+id/nav_statistic"
        android:name="com.bizubizu.foodjournal.ui.statistic.StatisticFragment"
        android:label="fragment_statistic"
        tools:layout="@layout/fragment_statistic" >
       <action
           android:id="@+id/action_nav_statistic_to_nav_home"
           app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_newNote"
        android:name="com.bizubizu.foodjournal.ui.note.NewNoteFragment"
        android:label="fragment_new_note"
        tools:layout="@layout/fragment_new_note" >
        <action
            android:id="@+id/action_nav_newNote_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.bizubizu.foodjournal.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>